--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,9 @@
   "name": "server",
   "version": "1.0.0",
   "description": "MYtinerary server - Albert Garcia",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "concurrently \"nodemon node.js\" \"cd ../client && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/CodeAlga/MYtinerary#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "concurrently": "^5.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.8.11"
   }
