--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router": "^5.1.2",
@@ -18,6 +20,14 @@
     "react-scripts": "3.3.1",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "enzyme-to-json": "^3.4.4"
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "scripts": {
     "start": "react-scripts start",
