--- a/client/package.json
+++ b/client/package.json
@@ -15,10 +15,14 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
     "react-slick": "^0.25.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
