--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
+    "express-validator": "^6.4.0",
     "mongoose": "^5.8.11",
     "multer": "^1.4.2"
   }
