--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^3.0.8",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
+    "notistack": "^0.9.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
