--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "concurrently \"nodemon node.js\" \"cd ../client && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1",
+    "client": "npm start --prefix client",
     "heroky-postbuild": "NPM_CONFIG_PRODUCCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
