--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MYtinerary server - Albert Garcia",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"nodemon node.js\" \"cd ../client && npm start\"",
+    "start": "concurrently \"nodemon node.js\" \"cd client && npm start\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix client",
     "heroky-postbuild": "NPM_CONFIG_PRODUCCTION=false npm install --prefix client && npm run build --prefix client"
