--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "MYtinerary server - Albert Garcia",
   "main": "server.js",
   "scripts": {
-    "start": "concurrently \"nodemon node.js\" \"cd client && npm start\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "client": "npm start --prefix client",
+    "start": "concurrently \"nodemon node.js\" \"npm run client\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "heroky-postbuild": "NPM_CONFIG_PRODUCCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
