--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.8.11",
     "multer": "^1.4.2",
+    "nodemon": "^2.0.2",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0"
