--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "MYtinerary server - Albert Garcia",
   "main": "server.js",
   "scripts": {
-    "client": "npm start --prefix client",
+    "client-install": "npm install --prefix client",
     "start": "concurrently \"nodemon node.js\" \"npm run client\"",
+    "client": "npm start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroky-postbuild": "NPM_CONFIG_PRODUCCTION=false npm install --prefix client && npm run build --prefix client"
   },
