--- a/client/package.json
+++ b/client/package.json
@@ -28,11 +28,10 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "slick-carousel": "^1.8.1"
-  },
-  "devDependencies": {
+    "slick-carousel": "^1.8.1",
     "enzyme-to-json": "^3.4.4"
   },
+  "devDependencies": {},
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
