--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "MYtinerary server - Albert Garcia",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
+    "start": "node server.js",
+    "server": "nodemon server.js",
     "client": "npm start --prefix client",
-    "start": "concurrently \"nodemon node.js\" \"npm run client\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "heroky-postbuild": "NPM_CONFIG_PRODUCCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "repository": {
     "type": "git",
